--- a/zxf-java-maven-minimal/pom.xml
+++ b/zxf-java-maven-minimal/pom.xml
@@ -7,4 +7,20 @@
     <groupId>zxf</groupId>
     <artifactId>zxf-java-maven-minimal</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
