--- a/zxf-java-maven-multiple/zxf-java-maven-multiple-a/pom.xml
+++ b/zxf-java-maven-multiple/zxf-java-maven-multiple-a/pom.xml
@@ -39,7 +39,7 @@
 
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
+            <artifactId>mockito-core</artifactId>
         </dependency>
     </dependencies>
 
